# ChangeLog for app-arch/alien
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/alien/ChangeLog,v 1.28 2012/01/29 20:47:44 lordvan Exp $

*alien-8.86 (29 Jan 2012)

  29 Jan 2012; <lordvan@gentoo.org> -alien-8.64.ebuild, -alien-8.69.ebuild,
  -alien-8.72.ebuild, +alien-8.86.ebuild:
  removed old unstable versions, added newest version fixes bug #303865 (thanks
  to Clemmitt M. Sigler for reporting)

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> alien-8.74.ebuild:
  Stable for HPPA (bug #249918).

  18 Mar 2009; Joseph Jezak <josejx@gentoo.org> alien-8.74.ebuild:
  Marked ppc stable for bug #249918.

  25 Feb 2009; Markus Meier <maekke@gentoo.org> alien-8.74.ebuild:
  amd64/x86 stable, bug #249918

  22 Feb 2009; Tobias Klausmann <klausman@gentoo.org> alien-8.74.ebuild:
  Stable on alpha, bug #249918

*alien-8.74 (19 Feb 2009)

  19 Feb 2009; Thomas Raschbacher <lordvan@gentoo.org> +alien-8.74.ebuild:
  version bump + added dep for tar >= 1.14.91

*alien-8.72 (04 Feb 2009)

  04 Feb 2009; Patrick Lauer <patrick@gentoo.org> +alien-8.72.ebuild:
  Bump to 8.72, fixes #213596, dep added for #178476

*alien-8.69 (03 Feb 2008)

  03 Feb 2008; Samuli Suominen <drac@gentoo.org> -alien-8.47.ebuild,
  -alien-8.53.ebuild, -alien-8.65.ebuild, -alien-8.66.ebuild,
  +alien-8.69.ebuild:
  Version bump wrt #203662, thanks to Raúl Porcel for reporting.

  21 May 2007; Raúl Porcel <armin76@gentoo.org> alien-8.64.ebuild:
  alpha stable wrt #149666

  14 May 2007; Thomas Raschbacher <lordvan@gentoo.org> alien-8.66.ebuild:
  fixed bug where alien violates sandbox trying to write to /var/lib/alien

*alien-8.66 (13 May 2007)

  13 May 2007; Thomas Raschbacher <lordvan@gentoo.org> +alien-8.66.ebuild:
  added version 8.66 which now uses perl-app eclass (should fix bug #174095
  thanks to Pacho Ramos <pacho@condmat1.ciencias.uniovi.es> and
  jakub@gentoo.org)

*alien-8.65 (19 Feb 2007)
