@@ -1,6 +1,8 @@
 DIST alien_8.74.tar.gz 75158 RMD160 732c6199a3170409a60de48fb05afba170fb9768 SHA1 6bbc48d45213b15db9a6887c401a8363d102e8fa SHA256 91ddb623f6696b6fcdf4dd1924de1c360b124669e65d12495f5460c16c413b50
 DIST alien_8.86.tar.gz 64267 RMD160 66a949a6c1765e0bdfd6a4dd734c4714d17b3dc8 SHA1 35c62f2aec9abe98be6978daf67d38281fa30595 SHA256 d81a046a122133d823cb5bd55a85c0cfa8f77916cee0ac95765c25b9cf5abd8d
+DIST alien_8.87.tar.gz 64336 RMD160 391db47725b130b907bd3b86cb8fff05e62c7050 SHA1 58efcee3cfe839baef8160d85b7a48abc7f7a3d8 SHA256 3f7c752eb2f949491708f8027ec846e3910d3b0c7012036b37a2681f01d99098
 EBUILD alien-8.74.ebuild 828 RMD160 f7c09230f255d7411215bab49a868f0bc7e9c087 SHA1 aef15c82afad4ecf3f21510a3be008f8978f0687 SHA256 86d47bc73015eac85f0969c86a834b0bcb3e826033faa3f4b656041deda562b6
 EBUILD alien-8.86.ebuild 837 RMD160 7fd83617e2baab8f9f69b7a1d71e190472711203 SHA1 d6c31342f9f45515f4430fd7245d5c392b808767 SHA256 05adfeceb3e8db4383274fbda8afc0b4164c5f9a1b59775c9322b75ddb978dc5
-MISC ChangeLog 4119 RMD160 bac17f2085bd748de783b131ab738a7a38bd320a SHA1 bd2183a93dadf16b09374242549f5cdcb56ae16c SHA256 bb372fd5ed15c106a163c03716848dbdd90e8c4fa1ea82a4580c675f8f7f4b13
+EBUILD alien-8.87.ebuild 837 RMD160 ada99f65163b8cd7dbe7089c1112b4a20ed60208 SHA1 55ccbf5be4662e5e72f0e72f70338cd8f9eadc5c SHA256 3989a9b0c7845078674415957df23e6783064a1fc6b3a0b6d8e83ec1e885e5e3
+MISC ChangeLog 4223 RMD160 89c7e0c1d7910297ff311db1757f63e69a7af47b SHA1 b7a9418df5f313e8e53ad0e1ec4f4697e52a241d SHA256 ac940ef3f7ef32dc8dddc1ad285d1383339a3261661e28a4c86065c45c157c0e
 MISC metadata.xml 198 RMD160 5fd23eb09ec9ac4fc93714a3aa79db938b6a9e6b SHA1 067c3137bba5171ab7b5cdbd0358e6e21d9e3920 SHA256 89e535559535075581383448592334bb8e2bf2aebfb2e0efde3eb7b06e0c170c
